# float-protocols

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: zero_allocation.rs
src/: asts_protobuf.rs  batcher.rs  bitemporal.rs  cache.rs  cadence_translation.rs  clock_reconciliation.rs  dynamic_buffer.rs  gateway.rs  hfvhf.rs  inmarsat_c.rs  iridium_sbd.rs  lib.rs  lifetime_safe.rs  main.rs  metrics.rs  nidd.rs  otel_reconciler.rs  protocol.rs  reliability.rs  samsara.rs  sharding.rs  snapshot.rs  translator.rs  vsat.rs
tests/: chaos_dependency_failure.rs  chaos_network_partition.rs  chaos_partial_degradation.rs  integration_deadzone.rs  integration_protocol_translation.rs  stress_race.rs
